Agrega carta digital interactiva con colores pastel

--- a/index.html
+++ b/index.html
@@ -2,36 +2,19 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <title>Carta del Restaurante</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Carta Digital Interactiva</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <h1>Restaurante Buen Sabor</h1>
-        <p>Bienvenido a nuestra carta digital</p>
+        <h1>Carta del Restaurante</h1>
+        <nav id="section-nav">
+            <!-- Navegación generada por JS -->
+        </nav>
     </header>
-    <main>
-        <section>
-            <h2>Entradas</h2>
-            <ul>
-                <li><span>Ensalada mixta</span><span class="precio">$5</span></li>
-                <li><span>Empanadas</span><span class="precio">$4</span></li>
-            </ul>
-        </section>
-        <section>
-            <h2>Platos principales</h2>
-            <ul>
-                <li><span>Milanesa con papas</span><span class="precio">$12</span></li>
-                <li><span>Pollo al horno</span><span class="precio">$11</span></li>
-            </ul>
-        </section>
-        <section>
-            <h2>Postres</h2>
-            <ul>
-                <li><span>Flan casero</span><span class="precio">$5</span></li>
-                <li><span>Helado</span><span class="precio">$4</span></li>
-            </ul>
-        </section>
+    <main id="sections-container">
+        <!-- Secciones generadas por JS -->
     </main>
+    <script src="script.js"></script>
 </body>
 </html>
